Agregando archivos de proyecto.

--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,9 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "ssr": false,
+              "prerender": false
             }
           },
           "defaultConfiguration": "production"
@@ -97,5 +99,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "a7b263e2-c43d-4ea5-b96a-58c8411861aa"
   }
 }
